fix: spacing

--- a/src/styles/problem-card.module.scss
+++ b/src/styles/problem-card.module.scss
@@ -17,13 +17,17 @@
   }
 }
 
+.problem {
+  margin-bottom: 3.2rem;
+}
+
 .problemText {
   margin-bottom: 1.2rem;
 }
 
 .image {
   max-width: 100%;
-  margin: 1.2rem auto;
+  margin: 0 auto 3.2rem;
   border-radius: 0.6rem;
   display: block;
 }
